feat(core): fixing generation from template folders